--- a/templates/nav_bar.html
+++ b/templates/nav_bar.html
@@ -9,7 +9,7 @@
           <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="{% url 'student-list' %}">Estudiantes</a>
         </li>
         <li class="nav-item">
           <a class="nav-link disabled">Disabled</a>
