--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block content  %}
+<a class="btn btn-success" href="{% url 'student-add' %}">Agregar</a>
 <table class="table">
   <thead>
     <tr>
